set(_FILES
  probes/probes.C
  probes/patchProbes.C
  sampledSet/abaqus/abaqusMeshSet.C
  sampledSet/circle/circleSet.C
  sampledSet/cloud/cloudSet.C
  sampledSet/patchCloud/patchCloudSet.C
  sampledSet/polyLine/polyLineSet.C
  sampledSet/cellCentre/cellCentreSet.C
  sampledSet/face/faceOnlySet.C
  sampledSet/midPoint/midPointSet.C
  sampledSet/midPointAndFace/midPointAndFaceSet.C
  sampledSet/patchSeed/patchSeedSet.C
  sampledSet/patchEdge/patchEdgeSet.C
  sampledSet/sampledSet/sampledSet.C
  sampledSet/sampledSets/sampledSets.C
  sampledSet/triSurfaceMeshPointSet/triSurfaceMeshPointSet.C
  sampledSet/uniform/uniformSet.C
  sampledSet/array/arraySet.C
  sampledSet/shortestPath/shortestPathSet.C
  surface/cutting/cuttingPlane.C
  surface/cutting/cuttingPlaneCuts.C
  surface/cutting/cuttingPlaneSelection.C
  surface/cutting/cuttingSurface.C
  surface/cutting/cuttingSurfaceCuts.C
  surface/cutting/cuttingSurfaceBase.C
  surface/cutting/cuttingSurfaceBaseSelection.C
  surface/distanceSurface/distanceSurface.C
  surface/distanceSurface/distanceSurfaceFilter.C
  surface/isoSurface/isoSurfaceBase.C
  surface/isoSurface/isoSurfaceBaseNew.C
  surface/isoSurface/isoSurfaceParams.C
  surface/isoSurface/isoSurfaceCell.C
  surface/isoSurface/isoSurfacePoint.C
  surface/isoSurface/isoSurfaceTopo.C
  surface/thresholdCellFaces/thresholdCellFaces.C
  sampledSurface/sampledNone/sampledNone.C
  sampledSurface/sampledFaceZone/sampledFaceZone.C
  sampledSurface/sampledPatch/sampledPatch.C
  sampledSurface/sampledPatchInternalField/sampledPatchInternalField.C
  sampledSurface/sampledPlane/sampledPlane.C
  sampledSurface/isoSurface/sampledIsoSurface.C
  sampledSurface/isoSurface/sampledIsoSurfaceCell.C
  sampledSurface/isoSurface/sampledIsoSurfacePoint.C
  sampledSurface/isoSurface/sampledIsoSurfaceTopo.C
  sampledSurface/distanceSurface/sampledDistanceSurface.C
  sampledSurface/sampledCuttingPlane/sampledCuttingPlane.C
  sampledSurface/sampledCuttingSurface/sampledCuttingSurface.C
  sampledSurface/sampledMeshedSurface/sampledMeshedSurface.C
  sampledSurface/sampledMeshedSurface/sampledMeshedSurfaceNormal.C
  sampledSurface/sampledSurface/sampledSurface.C
  sampledSurface/sampledSurface/sampledSurfaceRegister.C
  sampledSurface/sampledSurfaces/sampledSurfaces.C
  sampledSurface/thresholdCellFaces/sampledThresholdCellFaces.C
  graphField/writePatchGraph.C
  graphField/writeCellGraph.C
  graphField/makeGraph.C
  meshToMesh/meshToMesh.C
  meshToMesh/meshToMeshParallelOps.C
  meshToMesh/calcMethod/meshToMeshMethod/meshToMeshMethod.C
  meshToMesh/calcMethod/meshToMeshMethod/meshToMeshMethodNew.C
  meshToMesh/calcMethod/cellVolumeWeight/cellVolumeWeightMethod.C
  meshToMesh/calcMethod/correctedCellVolumeWeight/correctedCellVolumeWeightMethod.C
  meshToMesh/calcMethod/direct/directMethod.C
  meshToMesh/calcMethod/mapNearest/mapNearestMethod.C
  meshToMesh0/meshToMesh0.C
  meshToMesh0/calculateMeshToMesh0Addressing.C
  meshToMesh0/calculateMeshToMesh0Weights.C
  functions/Function1/makeFunction1s.C
)
add_library(sampling ${_FILES})
target_compile_features(sampling PUBLIC cxx_std_11)
target_compile_definitions(sampling PUBLIC WM_LABEL_SIZE=${WM_LABEL_SIZE} WM_${WM_PRECISION} NoRepository OPENFOAM=${OPENFOAM_VERSION})
target_link_libraries(sampling PUBLIC finiteVolume lagrangian)
target_include_directories(sampling PUBLIC
  .
)
install(TARGETS sampling DESTINATION ${CMAKE_INSTALL_LIBDIR}/openfoam EXPORT openfoam-targets)
